# test-report-gen

./: .gitignore  README.md  main.py  pyproject.toml  report_gen_plugin.py
src/: generator.py  parsers.py
tests/: test_plugin.py
